--- a/packages/nodes-base/package.json
+++ b/packages/nodes-base/package.json
@@ -786,7 +786,7 @@
     "lossless-json": "^1.0.4",
     "luxon": "~2.3.0",
     "mailparser": "^3.2.0",
-    "moment": "~2.29.2",
+    "moment": "2.29.2",
     "moment-timezone": "^0.5.28",
     "mongodb": "^4.9.1",
     "mqtt": "4.2.6",
